--- a/assets/style.css
+++ b/assets/style.css
@@ -6,18 +6,10 @@
 }
 
 body {
-    height: 100%;
-    width: 100%;
-    background-color: rgb(182, 180, 180);
+    background-color: rgb(247, 243, 243);
 }
 
-.header a {
-    color: rgb(96, 169, 211);
-}
-
-h2, p, a {
-    color: rgb(48, 48, 59);
-}
+/* Header and Nav Bar */
 
 .header {
     display: flex;
@@ -25,66 +17,68 @@ h2, p, a {
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    height: 10%;
-    font-family: 'Courier New', Courier, monospace;
+    padding: .5rem 0 .5rem 0;
     background-color: rgb(48, 48, 59);
     color: rgb(96, 169, 211);
 }
 
 .header h1 {
-    display: block;
-    justify-content: flex-start;
-    align-items: center;
-    font-size: 50px;
-    padding: 5px;
-    padding-left: 5%;
+    display: inline-block;
+    font-size: 2.5rem;
+    padding: .25rem 1rem .25rem 3rem; 
     background-color: rgb(96, 169, 211);
     color: rgb(48, 48, 59);
 }
 
+.header nav {
+    display: inline-flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    height: 100%;
+    padding-right: 3rem;
+} 
+
 .header nav li {
     display: inline-block; 
-    justify-content: flex-end;
-    font-size: 20px;
-    margin-right: 20px;
-    padding-right: 20px;
+    font-size: 1.25rem;
+    margin-right: .75rem;
+    padding-right: .75rem;
 }
 
-main {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+
+.header a {
+    color: rgb(96, 169, 211);
 }
-.about {
-    display: flex;
-    flex-flow: row wrap;
+
+/* Hero image */
+
+.hero img {
+    height: 12rem;
+    width: 100%;
 }
-.about h2 {
-    flex: 1 0 33.3%;
-    font-size: 30px;
-}
-.about p {
-    flex: 1 0 66.6%;
-}
-.projects {
+
+/* Body of the website */   
+
+.content {
     display: flex;
     flex-flow: row wrap;
+    justify-content: flex-start;
+    margin: 2rem 0 2rem 0;
+
 }
-.projects h2 {
-    flex: 1 0 33.3%;
-    font-size: 30px;
+
+.content h2 {
+    /* display: inline-block; */
+    flex: 1 0 25%;
+    font-size: 2.5rem;
+    border-right: solid black;
 }
-.projects a {
-    flex: 1 0 66.6%;
+
+.content p {
+    flex: 1 0 75%;
+    padding: 0 3rem 0 1.5rem;
 }
-.contact {
-    display: flex;
-    flex-flow: row wrap;
-}
-.contact h2 {
-    flex: 1 0 33.3%;
-    font-size: 30px;
-}
-.contact p {
-    flex: 1 0 66.6%;
+.content div {
+    flex: 1 0 75%;
+    padding: 0 3rem 0 1.5rem;
 }
