--- a/assets/style.css
+++ b/assets/style.css
@@ -5,8 +5,13 @@
     margin: 0;
 }
 
+/* General Styles */
 body {
     background-color: rgb(247, 243, 243);
+}
+
+h1, h2, h3, p, a, li {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 /* Header and Nav Bar */
@@ -77,7 +82,7 @@ body {
     padding-right: 2rem;
 }
 
-.content p {
+.content p, .content div {
     flex: 1 0 75%;
     padding: 0 5rem 0 1.5rem;
 }
@@ -96,10 +101,7 @@ body {
 .content ul li a {
     color: rgb(48, 48, 59);
 }
-.content div {
-    flex: 1 0 75%;
-    padding: 0 5rem 0 1.5rem;
-}
+
 
 /* Work Styling */
 #larger-img {
@@ -215,18 +217,6 @@ img:hover {
 
 @media screen and (max-width: 550px) {
    
-    #larger-img {
-        height: 15rem;
-    }
-
-    .project-tag h3 {
-        top: 12rem;
-    }
-
-    .content ul li {
-        font-size: 1.25rem;
-    }
-
     .header {
         padding: .5rem 0 0 0;
     }
@@ -240,4 +230,18 @@ img:hover {
         width: 40%;
         padding: .5rem 1rem .5rem 0rem;
     }
+    
+    #larger-img {
+        height: 15rem;
+    }
+
+    .project-tag h3 {
+        top: 12rem;
+    }
+
+    .content ul li {
+        font-size: 1.25rem;
+    }
+
+   
 }
